--- a/src/config/backup-build.yaml
+++ b/src/config/backup-build.yaml
@@ -993,7 +993,7 @@ components:
           $ref: "#/components/schemas/XInput"
         external_ref:
           $ref: "#/components/schemas/MediaFile"
-        cancellation_eligible:
+        cancel_eligible:
           description: Indicates if cancellation is eligible
           type: boolean
     Catalog:
@@ -1258,6 +1258,9 @@ components:
           type: string
         long_desc:
           type: string
+        symbol:
+          type: string
+          description: URL or identifier for the symbol/icon representing this entity
         additional_desc:
           type: object
           additionalProperties: false
